# bluesky-gym-sasha

./: .gitattributes  .gitignore  README.md  analyze_and_plot.py  benchmark_rerun.py  box_plotter.py  eval_trained.py  eval_trained_cr.py  eval_trained_cr_plot.py  eval_trained_cr_quick.py  intermediate_run.py  main.py  mp_example.py  mp_main.py  mp_main_2.py  plot_test.py  pyproject.toml  requirements.txt  result_plotter.py  sac_att.py  sac_att_per.py  sac_att_sas.py  sac_att_sas_cr.py  sac_att_sas_cr_unc.py  sac_att_stab.py  sac_mergecr_test.py  sac_test.py  sb3_zoo_test.py  sensitivity_analysis_check_order.py  test.py  test_waypoint_env.py  test_waypoint_plan_env.py  zoo_test.py
bluesky_gym/: __init__.py
bluesky_zoo/: merge_v0.py  sector_cr_v0.py
gym_examples/: __init__.py
logs_test/: _HorizontalCREnv-v0_MVP_tr_True_te_False_10000_FIN.csv  _HorizontalCREnv-v0_PPO_tr_False_te_False_1000.csv  _HorizontalCREnv-v0_PPO_tr_False_te_True_1000.csv  _HorizontalCREnv-v0_PPO_tr_True_te_False_1000.csv  _HorizontalCREnv-v0_PPO_tr_True_te_True_1000.csv
logs_unc_cr_1.5/: log_cc.csv  log_cu.csv  log_uc.csv  log_uu.csv
logs_unc_cr_3.5std/: log_cc.csv  log_cu.csv  log_mvpc15.csv  log_mvpu15.csv  log_uc.csv  log_uu.csv
sac/: SAC.py  actor.py  critic_q.py  main.py
sac_cr_att/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_per_large/: SAC.py  actor.py  critic_q.py  replay_buffer.py
sac_cr_att_sas/: SAC.py  actor.pt  qf.pt  qf_target.pt
sac_cr_att_sas_2pz/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_sas_v_only/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_sas_vlim/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_sas_vlim_20/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_sas_vlim_20_50k_epi/: actor.pt  qf.pt  qf_target.pt
sac_cr_att_stab/: SAC.py  actor.py  critic_q.py
sac_unc_cr_att_clean_posonly_20/: actor.pt  qf.pt  qf_target.pt
sac_unc_cr_att_clean_posonly_20_3.5n_30rpz/: actor.pt  qf.pt  qf_target.pt
sac_unc_cr_att_noise/: actor.pt  qf.pt  qf_target.pt
sac_unc_cr_att_noise_posonly_20/: actor.pt  critic_q.py  qf.pt  qf_target.pt
sac_unc_cr_att_noise_posonly_20_3.5n_30rpz/: actor.pt  qf.pt  qf_target.pt
scripts/: descent_env_sac.py  multi_processing_example.py  result_plotter.py  vertical_cr_env_sac.py  workshop_pt1.py  workshop_pt2.py
sensitivity_logs/: sensitivity_0075_CentralisedMergeEnv-v0_PPO_100.csv  sensitivity_0075_CentralisedMergeEnv-v0_PPO_1000.csv  sensitivity_0075_CentralisedMergeEnv-v0_PPO_10000.csv  sensitivity_0075_CentralisedMergeEnv-v0_SAC_100.csv  sensitivity_0075_CentralisedMergeEnv-v0_SAC_1000.csv  sensitivity_0075_CentralisedMergeEnv-v0_SAC_10000.csv  sensitivity_0075_baseline_CentralisedMergeEnv-v0_SAC_100.csv  sensitivity_0075_mvp_baseline_CentralisedMergeEnv-v0_SAC_10.csv  (+6 more)
(+191 files in other folders)
