[project]
name = "bluesky-gym"
version = "0.1.0"
dependencies = [
    "bluesky-simulator",
    "torch==2.2.0",
    "pygame==2.5.2",
    "gymnasium",
    "stable-baselines3==2.2.1",
    "numpy==1.24",
    "bluesky-simulator",
]

authors = [
  { name="Jan Groot", email="d.j.groot@tudelft.nl" },
  { name="Joost Ellerbroek", email="j.ellerbroek@tudelft.nl" },
  { name="Giulia Leto", email="g.leto@tudelft.nl" },
  { name="Sasha Vlaskin", email="a.vlaskin@tudelft.nl" },
]
description = "A gymnasium style environment for standardized Reinforcement Learning research in Air Traffic Management."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TUDelft-CNS-ATM/bluesky-gym"
Issues = "https://github.com/TUDelft-CNS-ATM/bluesky-gym/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "bluesky_gym/*",
]
